--- a/src/Pages/Home/Header/BavBar/NavBar.module.css
+++ b/src/Pages/Home/Header/BavBar/NavBar.module.css
@@ -42,6 +42,15 @@ nav .Links ul a{
     font-size: 1rem;
     transition: all 0.3s ease-in-out;
 }
+.Links ul li i:hover{
+    color:#C59D5F;
+    opacity: 1;
+    transition: all 0.2s ease-in-out;
+}
+.Links ul li i:active{
+    opacity: 0.8;
+    transition: all 0.2s ease-in-out;
+}
 nav .Links ul a:hover{
     color: #C59D5F;
     transition: all 0.3s ease-in-out;
@@ -64,8 +73,69 @@ nav .Links ul a.active{
     filter: opacity(80%);
     opacity: (0);
 }
+.Links ul li i{
+    font-size: 1.6rem;
+    padding-left: 15px;
+    margin-top: -2px;
+    color: white;
+    transition: all 0.2s ease-in-out;
+    cursor: pointer;
+    opacity: 0.8;
+}
+/* Start Drop Info  */
+.dropInfo{
+    height: 0px;
+    width: 230px;
+    background: whitesmoke;
+    position: absolute;
+    top: 100%;
+    right: 10px;
+    border-bottom-right-radius: 5px;
+    border-bottom-left-radius: 5px;
+    overflow: hidden;
+    border-top:0px solid #C59D5F;
+    transition: all 0.5s ease-in-out;
+}
+.Links ul li i:hover + .dropInfo{
+    height: 150px;
+    border-top:6px solid #C59D5F;
+    transition: all 0.3s ease-in-out;
+}
+.dropInfo:hover{
+    height: 150px;
+    border-top:6px solid #C59D5F;
+}
+.dropInfo ul li{
+    margin-bottom: 15px;
+    margin-left:-15px ;
+    transition: all 0.1s ease-in-out;
+}
+.dropInfo ul li a{
+    color: #081528 !important;
+    padding-left: 8px !important;
+    font-size: 1rem !important;
+}
+.dropInfo ul li i{
+    color: #C59D5F !important;
+    padding-left: 7px !important;
+}
+.dropInfo ul li:hover{
+    border-left: 3.5px solid #081528;
+    transition: all 0.1s ease-in-out;
+}
+.LogoutBtn{
+    background: none;
+    border: none;
+    cursor: pointer;
+}
+.SignInBtn{
+    background: none;
+    border: none;
+    color: white;
+}
+/* End Drop Info  */
 .ThrowList{
-    height: 350px;
+    height: 420px;
     width: 100%;
     background: #081528;
     position: absolute;
@@ -174,6 +244,7 @@ nav .hiddenThrowList ul li a{
     }
     .bgLight .Logo,.bgDark .Logo{
         padding-top: 0.7rem;
+        /* margin-left: -26px; */
     }
     .bgLight .Logo a,.bgDark .Logo a{
         font-weight: bold;
@@ -186,6 +257,7 @@ nav .hiddenThrowList ul li a{
         flex-direction:row ;
         list-style-type: none;
         padding-top: 1rem;
+        padding-left: 0;
     }
     nav .Links ul a{
         font-weight: bold;
@@ -194,5 +266,11 @@ nav .hiddenThrowList ul li a{
         padding-left: 1rem;
         font-size: 0.9rem;
         transition: all 0.3s ease-in-out;
+    }
+    .Links ul li i{
+        font-size: 1.2rem;
+        padding-left: 15px;
+        margin-top: -2px;
+        color: #C59D5F;
     }
 }
