--- a/src/Pages/Home/Header/Header.module.css
+++ b/src/Pages/Home/Header/Header.module.css
@@ -6,3 +6,26 @@
 from {transform: scale(1);}
 to {transform: scale(2);}
 } */
+.loading {
+    display: block;
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(192, 192, 192, 0.5);
+    transition:all 0.5s ease-in-out ;
+    overflow: hidden;
+}
+
+.bgvideo {
+    /* position: fixed; */
+    transition:all 0.5s ease-in-out ;
+    right: 0;
+    bottom: 0;
+    width: auto;
+    height: auto;
+    min-height: 100%;
+    min-width: 100%;
+}
