--- a/src/Pages/Home/Home.module.css
+++ b/src/Pages/Home/Home.module.css
@@ -9,7 +9,7 @@
     overflow: hidden;
 }
 .BodyHeader{
-    background-image: url('../../assets/Header-1.jpg');
+    /* background-image: url('../../assets/Header-1.jpg');
     background-repeat: no-repeat;
     background-color: rgba(167, 166, 166, 0.582);
     background-position: center;
@@ -18,14 +18,21 @@
     height:100vh;
     position: relative;
     display: block;
-    transition: all 0.54s ease-in-out;
-
+    transition: all 0.54s ease-in-out; */
+    position: relative;
+    height: 100vh;
+    transition:all 0.5s ease-in-out ;
 }
 
 .backContainer{
     height:100%;
     width:40%;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%,-50%);
     transition: all 0.54s ease-in-out;
+    z-index: 2;
 }
 .HomeTypingBox{
     width: 100%;
@@ -37,7 +44,12 @@
     align-items: center;
     justify-content: center;
     text-align: center;
-    transition: all 0.54s ease-in-out;
+    transition: all 0.6s ease-in-out;
+}
+.HomeTypingBox:hover{
+    background:rgba(167, 166, 166, 0.336);
+    border: 2px solid whitesmoke;
+    transition:all 0.6s ease-in-out;
 }
 @media screen and (max-width: 960px) {
     .BodyHeader{
@@ -52,6 +64,7 @@
         display: block;
         transition: all 0.54s ease-in-out;
         white-space: pre-wrap;
+        transition:all 0.5s ease-in-out ;
     }
     .HomeTypingBox{
         width: 100%;
@@ -73,7 +86,8 @@
     .backContainer{
         transition: all 0.54s ease-in-out;
         height:100%;
-        width:55%
+        width:55%;
+        top: 58%;
     }
 }
 @media screen and (max-width: 600px) {
@@ -89,6 +103,7 @@
         display: block;
         transition: all 0.54s ease-in-out;
         white-space: pre-wrap;
+        transition:all 0.5s ease-in-out ;
     }
     .HomeTypingBox{
         width: 100%;
@@ -135,5 +150,5 @@
   /* The typewriter cursor effect */
 @keyframes blink-caret {
     from, to { border-color: transparent }
-    50% { border-color: orange };
+    50% { border-color: #C59D5F };
 }
