--- a/src/Pages/Home/Header/Header.module.css
+++ b/src/Pages/Home/Header/Header.module.css
@@ -7,25 +7,78 @@ from {transform: scale(1);}
 to {transform: scale(2);}
 } */
 .loading {
-    display: block;
-    position: absolute;
-    top: 0;
-    left: 0;
-    z-index: 0;
-    width: 100%;
-    height: 100%;
-    background-color: rgba(192, 192, 192, 0.5);
-    transition:all 0.5s ease-in-out ;
-    overflow: hidden;
+  display: block;
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(192, 192, 192, 0.5);
+  transition: all 0.5s ease-in-out;
+  overflow: hidden;
 }
 
 .bgvideo {
-    /* position: fixed; */
-    transition:all 0.5s ease-in-out ;
-    right: 0;
-    bottom: 0;
-    width: auto;
-    height: auto;
-    min-height: 100%;
-    min-width: 100%;
+  /* position: fixed; */
+  transition: all 0.5s ease-in-out;
+  right: 0;
+  bottom: 0;
+  width: auto;
+  height: auto;
+  min-height: 100%;
+  min-width: 100%;
+}
+
+/* arrow down animation  */
+
+
+.arrow {
+  position: absolute;
+  top: 88%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+.arrow span {
+  display: block;
+  width: 30px;
+  height: 30px;
+  border-bottom: 5px solid #c0d9ff;
+  border-right: 5px solid #c0d9ff;
+  transform: rotate(45deg);
+  margin: -10px;
+  animation: animate 2s infinite;
+}
+.arrow a {
+  position: absolute;
+	top: 0;
+	left: -20px;
+	width: 50px;
+	height: 100px;
+	cursor: pointer;
+}
+.arrow span:nth-child(2) {
+  animation-delay: -0.2s;
+}
+.arrow span:nth-child(3) {
+  animation-delay: -0.4s;
+}
+@keyframes animate {
+  0% {
+    opacity: 0;
+    transform: rotate(45deg) translate(-20px, -20px);
+  }
+  50% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 0;
+    transform: rotate(45deg) translate(20px, 20px);
+  }
+}
+
+@media screen and (max-width:944px) {
+  .arrow span{
+    display: none;
+  }
 }
